--- a/TechJobsPersistent/TechJobsPersistent.csproj
+++ b/TechJobsPersistent/TechJobsPersistent.csproj
@@ -7,7 +7,7 @@
 
 
   <ItemGroup>
-    <Folder Include="ViewModels\" />
+    <Folder Include="Migrations\" />
     <Folder Include="Views\Employer\" />
     <Folder Include="Data\" />
     <Folder Include="Views\List\" />
@@ -15,6 +15,10 @@
     <Folder Include="Views\Skill\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.1" />
   </ItemGroup>
 </Project>
